Fix alignment of hamburger menu

--- a/firefox/etc/.mozilla/firefox/main/chrome/userChrome.css
+++ b/firefox/etc/.mozilla/firefox/main/chrome/userChrome.css
@@ -467,7 +467,7 @@ browser[type=content] > html {
 	max-width: 100px !important;
 }
 
-#navigator-toolbox * toolbarbutton:not(.webextension-browser-action),
+#navigator-toolbox * toolbarbutton:not(.webextension-browser-action):not(#PanelUI-menu-button),
 #navigator-toolbox * toolbarbutton:not(#tabs-newtab-button) image,
 #navigator-toolbox * toolbarbutton:not(#tabs-newtab-button) stack {
 	width:      calc(var(--button-size) + 10px) !important;
@@ -484,6 +484,10 @@ browser[type=content] > html {
 .toolbarbutton-badge {
   margin-top:   0px !important;	
   margin-right: 0px !important;	
+}
+
+#PanelUI-menu-button {
+	margin: 0px 5px !important;
 }
 
 #navigator-toolbox #downloads-indicator-anchor #downloads-indicator-progress-outer #downloads-indicator-progress-inner,
